Revision history for Perl distribution Test-Class-Moose

{{$NEXT}}

0.80     2016-09-25

  [BUG FIXES]

  * Depend on Test2 1.302059. This version fixes an issue where subtest output
    from test methods was not showing up. Reported by Ilya Chesnokov. GH #67.

0.79     2016-09-25

  [BACKWARDS INCOMPATIBILITIES]

  * The value of Test::Class::Moose::Config->args is no longer passed to the
    constructor for each test class instance. This was a holdover from when
    Test::Class::Moose was both a parent class for your test classes and the
    test class runner. Fixes GH #68. Reported by Noel Maddy.

0.78     2016-08-21

  [ENHANCEMENTS]

  * Updated the included Test::Class::Moose::Tutorial docs.

0.77     2016-08-21

  [BACKWARDS INCOMPATIBILITIES]

  * The Test::Class::Moose->runtests backwards compatibility method shim has
    been removed. You should be using Test::Class::Moose::Runner to run test
    classes.

  * The long-deprecated Test::Class::Moose::Role::Parallel role has been
    removed. This didn't actually do anything except to tell you to use
    Test::Class::Moose::Runner instead.

  [DEPRECATIONS]

  * The passing of the report object as an argument to test methods and test
    control methods is now deprecated. You can get the report from the test
    class object itself via the $test->test_report method.

0.76     2016-08-05

  [BUG FIXES]

  * Require Test::Harness 3.29. Tests fail with earlier versions. Reported by
    Andreas Koenig. (GitHub issue #65).

0.75     2016-08-02

  * This is the first non-TRIAL release of the "rewrite TCM to use Test2"
    work. There are no changes from 0.74. All changes below are a summary of
    previous TRIAL release changes.

  [BACKWARDS INCOMPATIBILITIES]

  * The test_teardown method is no longer run when a test is skipped unless
    run_control_methods_on_skip returns a true value. The test_teardown method
    was never intended to be run unconditionally.
